cmake_minimum_required(VERSION 3.27)
project(untitled1)

set(CMAKE_CXX_STANDARD 17)

add_executable(P1-LarkinNwachukwu main.cpp
        tools.hpp
        tools.cpp
        dice.hpp
        dice.cpp
        player.hpp
        player.cpp
        Enum.hpp
        column.cpp
        column.hpp
        Enum.cpp
        game.hpp
        game.cpp
        board.hpp
        board.cpp
        CList.cpp
        CList.hpp
)
